--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port=8010
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=postgres
+
 spring.jpa.show-sql=true
-spring.jwt.secret_key=java9
+spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8010
+
+spring.jwt.secret.key=java9
 server.error.include-message=always
-
-
